--- a/jupyter_notebooks/SAP_CPI_Routing.ipynb
+++ b/jupyter_notebooks/SAP_CPI_Routing.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Format conversion"
+    "# Routing"
    ]
   },
   {
@@ -41,7 +41,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A) JSON to XML"
+    "# Router - XML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Routes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* GCP -> Google Cloud Platform\n",
+    "* AWS -> Amazon Web Services\n",
+    "* Default -> Error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Condition - XML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "//[variable] = [route]"
    ]
   },
   {
@@ -55,16 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Sender - HTTPS Adapter\n",
-    "* JSON to XML Converter\n",
-    "* Content Modifier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_cpi_c1_design.png)"
+    "![title](../images/sap_cpi_routing_xml01.png)"
    ]
   },
   {
@@ -99,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_cpi_c1_post1.png)"
+    "![title](../images/sap_cpi_routing_xml02.png)"
    ]
   },
   {
@@ -113,28 +134,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_cpi_c1_post2.png)"
+    "![title](../images/sap_cpi_routing_xml03.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Monitor Artifacts"
+    "# Router - Non XML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_cpi_c1_monitor.png)"
+    "## Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# B) XML to JSON"
+    "* GCP -> Google Cloud Platform\n",
+    "* AWS -> Amazon Web Services\n",
+    "* Default -> Error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Condition - Non XML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "${[origin].[vaiable]} = [route]"
    ]
   },
   {
@@ -148,16 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Sender - HTTPS Adapter\n",
-    "* XML to JSON Converter\n",
-    "* Content Modifier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_cpi_c2_design.png)"
+    "![title](../images/sap_cpi_routing_xmln01.png)"
    ]
   },
   {
@@ -192,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_cpi_c2_post1.png)"
+    "![title](../images/sap_cpi_routing_xmln02.png)"
    ]
   },
   {
@@ -206,28 +234,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_cpi_c2_post2.png)"
+    "![title](../images/sap_cpi_routing_xmln03.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Monitor Artifacts"
+    "# Multicast"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_cpi_c2_monitor.png)"
+    "## Operations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# C) CSV to XML"
+    "* Operation A\n",
+    "* Operation B\n",
+    "* Operation C\n",
+    "* Operation D"
    ]
   },
   {
@@ -241,16 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Sender - HTTPS Adapter\n",
-    "* CSV to XML Converter\n",
-    "* Content Modifier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_cpi_c3_design.png)"
+    "![title](../images/sap_cpi_routing_mult01.png)"
    ]
   },
   {
@@ -264,28 +286,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method"
+    "### Flow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### POST"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Request"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_cpi_c3_post1.png)"
+    "* Operation A -> B -> C -> D"
    ]
   },
   {
@@ -299,114 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](../images/sap_cpi_c3_post2.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Monitor Artifacts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_cpi_c3_monitor.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# D) XML to CSV"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Design Artifacts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Sender - HTTPS Adapter\n",
-    "* XML to CSV Converter\n",
-    "* Content Modifier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_cpi_c4_design.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Postman"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Method"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### POST"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Request"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_cpi_c4_post1.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Response"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_cpi_c4_post2.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Monitor Artifacts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](../images/sap_cpi_c4_monitor.png)"
+    "![title](../images/sap_cpi_routing_mult02.png)"
    ]
   }
  ],
