--- a/jupyter_notebooks/SAP_HXE.ipynb
+++ b/jupyter_notebooks/SAP_HXE.ipynb
@@ -164,6 +164,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "98b6f890",
+   "metadata": {},
+   "source": [
+    "### 1st Attempt - Failed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "82480b32",
    "metadata": {},
    "source": [
@@ -176,6 +184,22 @@
    "metadata": {},
    "source": [
     "![title](../images/sap_hxe_08.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91bc6dc3",
+   "metadata": {},
+   "source": [
+    "### 2nd Attempt - Completed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bf142e6",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_hxe_09.png)"
    ]
   },
   {
