--- a/jupyter_notebooks/SAP_HXE.ipynb
+++ b/jupyter_notebooks/SAP_HXE.ipynb
@@ -45,7 +45,7 @@
    "id": "8557132c",
    "metadata": {},
    "source": [
-    "* Infrastructure - AWS Launch Wizard (Failed)\n",
+    "* Infrastructure - AWS Launch Wizard (Completed)\n",
     "* Software - SAP HANA 2.0 Express Edition (Pending)\n",
     "* SAP HANA Cockpit (Pending)"
    ]
