--- a/jupyter_notebooks/SAP_HXE.ipynb
+++ b/jupyter_notebooks/SAP_HXE.ipynb
@@ -45,9 +45,9 @@
    "id": "8557132c",
    "metadata": {},
    "source": [
-    "* Infrastructure - AWS Launch Wizard (Completed)\n",
-    "* Software - SAP HANA 2.0 Express Edition (Pending)\n",
-    "* SAP HANA Cockpit (Pending)"
+    "* Infrastructure - AWS Launch Wizard\n",
+    "* Installation - SAP HANA 2.0 Express Edition\n",
+    "* SAP HANA Cockpit"
    ]
   },
   {
@@ -207,7 +207,119 @@
    "id": "af4e72d0",
    "metadata": {},
    "source": [
-    "## 📕 Software - SAP HANA 2.0 Express Edition"
+    "## 📕 Installation - SAP HANA 2.0 Express Edition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca5babee",
+   "metadata": {},
+   "source": [
+    "### Installation Files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a83026",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_hxe_10.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4261399",
+   "metadata": {},
+   "source": [
+    "### Installation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43b0aaea",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_hxe_11.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "462d52b1",
+   "metadata": {},
+   "source": [
+    "### Deployed XS Advanced Applications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3079bd59",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_hxe_12.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4f7d04d",
+   "metadata": {},
+   "source": [
+    "### URL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c07f18d",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_hxe_13.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6141647",
+   "metadata": {},
+   "source": [
+    "### hosts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bf58dff",
+   "metadata": {},
+   "source": [
+    "[Private IP Address] [saphanaxe.local]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78fd6595",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_hxe_14.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b235e466",
+   "metadata": {},
+   "source": [
+    "### Databases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5a2e5df",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_hxe_15.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "526b3070",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_hxe_16.png)"
    ]
   },
   {
@@ -216,6 +328,14 @@
    "metadata": {},
    "source": [
     "## 📙 SAP HANA Cockpit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59e3014d",
+   "metadata": {},
+   "source": [
+    "![title](../images/sap_hxe_17.png)"
    ]
   }
  ],
