--- a/jupyter_notebooks/AWS_Networking.ipynb
+++ b/jupyter_notebooks/AWS_Networking.ipynb
@@ -45,10 +45,10 @@
    "id": "0e07b372",
    "metadata": {},
    "source": [
-    "* Public Subnet\n",
-    "* Private Subnet\n",
-    "* NAT Gateway\n",
-    "* VPC Peering"
+    "* 📕 Public Subnet\n",
+    "* 📘 Private Subnet\n",
+    "* 📗 NAT Gateway\n",
+    "* 📙 VPC Peering"
    ]
   },
   {
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f58b56",
+   "id": "1ae19318",
    "metadata": {},
    "outputs": [],
    "source": []
