--- a/jupyter_notebooks/SAP_CI_HANADB.ipynb
+++ b/jupyter_notebooks/SAP_CI_HANADB.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_01.png)"
+    "![title](images/sap_ci_hanadb_01.png)"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_02.png)"
+    "![title](images/sap_ci_hanadb_02.png)"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_03.png)"
+    "![title](images/sap_ci_hanadb_03.png)"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_04.png)"
+    "![title](images/sap_ci_hanadb_04.png)"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_05.png)"
+    "![title](images/sap_ci_hanadb_05.png)"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_06.png)"
+    "![title](images/sap_ci_hanadb_06.png)"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_07.png)"
+    "![title](images/sap_ci_hanadb_07.png)"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_08.png)"
+    "![title](images/sap_ci_hanadb_08.png)"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_09.png)"
+    "![title](images/sap_ci_hanadb_09.png)"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_10.png)"
+    "![title](images/sap_ci_hanadb_10.png)"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_11.png)"
+    "![title](images/sap_ci_hanadb_11.png)"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](sap_ci_hanadb_12.png)"
+    "![title](images/sap_ci_hanadb_12.png)"
    ]
   }
  ],
